[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/matching-engine",
    "crates/api-server",
    "crates/ws-service",
    "crates/cache-updater",
    "benches",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
axum = { version = "0.7", features = ["ws"] }
anyhow = "1"
