[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../crates/common" }
matching-engine = { path = "../crates/matching-engine" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matching_benchmark"
harness = false
