[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
rdkafka = { workspace = true }
anyhow = { workspace = true }
tokio-stream = "0.1"
rustc-hash = { workspace = true }
